Optimized and modify user and menu endpoints, added CRUD course endpoint
