# src/controllers/menu.controller.ts
@@ -1,6 +1,7 @@
 import { Route, Tags, Security, Post, Body, Query, Get, Path, Patch, Delete } from 'tsoa'
 import Menu from '../models/menu.model'
 import { CreateBodyMenuType, UpdateBodyMenuType } from '../schemas/menu.schema'
+import { ObjMenuType } from './types'
 
 @Route('/menu')
 @Tags('MenuController')
@@ -11,17 +12,21 @@ export class MenuController {
    * @returns Information of all menus with or without filters
    */
   @Get('/')
-  public async getMenu (@Query() active?: boolean) {
+  public async getMenus (@Query() active?: boolean) {
     if (active === undefined) {
-      return await Menu.find()
+      const allMenu: ObjMenuType[] = await Menu.find()
         .sort({ order: 1 })
         .select({ title: 1, path: 1, order: 1, active: 1 })
+        .lean()
         .exec()
+      return allMenu
     } else {
-      return await Menu.find({ active })
+      const activeMenu: ObjMenuType[] = await Menu.find({ active })
         .sort({ order: 1 })
         .select({ title: 1, path: 1, order: 1, active: 1 })
+        .lean()
         .exec()
+      return activeMenu
     }
   }
 
@@ -34,7 +39,8 @@ export class MenuController {
   @Post('/')
   public async createMenu (@Body() body: CreateBodyMenuType) {
     const menu = await Menu.create(body)
-    return menu
+    const objMenu: ObjMenuType = menu.toObject({ versionKey: false })
+    return objMenu
   }
 
   /**
@@ -46,7 +52,7 @@ export class MenuController {
   @Security('bearerAuth')
   @Patch('/:id')
   public async updateMenu (@Path() id: string, @Body() body: UpdateBodyMenuType) {
-    await Menu.findByIdAndUpdate(id, body, { runValidators: true, new: true })
+    await Menu.findByIdAndUpdate(id, body, { runValidators: true, new: true }).exec()
     return { message: 'Menu update successfully' }
   }
 
@@ -58,7 +64,7 @@ export class MenuController {
   @Security('bearerAuth')
   @Delete('/:id')
   public async deleteMenu (@Path() id: string) {
-    await Menu.findByIdAndDelete(id)
+    await Menu.findByIdAndDelete(id).exec()
     return { message: 'Menu delete successfully' }
   }
 }
