# src/routes/router.ts
@@ -1,14 +1,16 @@
 /* eslint-disable @typescript-eslint/no-misused-promises */
 import { Request, Response, Router } from 'express'
 import { fcLoginUser, fcRefreshAccessToken, fcRegisterUser } from './auth.route'
-import { uploadAvatar } from '../middlewares/upload.middleware'
-import { fcCreateUser, fcDeleteUser, fcGetMe, fcGetUsers, fcUpdateUser } from './users.route'
+import { uploadSingleAvatar, uploadSingleMiniature } from '../middlewares/upload.middleware'
+import { fcCreateUser, fcDeleteUser, fcGetMe, fcGetUsers, fcUpdateUser } from './user.route'
 import { authValidator } from '../middlewares/authentication.middleware'
 import { schemaValidator } from '../middlewares/schemaValidator.middleware'
 import { RegisterAuthSchema, LoginAuthSchema, RefreshAuthSchema } from '../schemas/auth.schema'
-import { CreateUsersSchema, DeleteUsersSchema, GetUsersSchema, UpdateUsersSchema } from '../schemas/users.schema'
-import { fcCreateMenu, fcDeleteMenu, fcGetMenu, fcUpdateMenu } from './menu.route'
+import { CreateUserSchema, DeleteUserSchema, GetUserSchema, UpdateUserSchema } from '../schemas/user.schema'
+import { fcCreateMenu, fcDeleteMenu, fcGetMenus, fcUpdateMenu } from './menu.route'
 import { CreateMenuSchema, DeleteMenuSchema, GetMenuSchema, UpdateMenuSchema } from '../schemas/menu.schema'
+import { CreateCourseSchema, DeleteCourseSchema, GetCourseSchema, UpdateCourseSchema } from '../schemas/course.schema'
+import { fcCreateCourse, fcDeleteCourse, fcGetCourses, fcUpdateCourse } from './course.route'
 
 const router = Router()
 
@@ -29,28 +31,38 @@ router.route('/auth/login')
 router.route('/auth/refresh')
   .post(schemaValidator(RefreshAuthSchema), fcRefreshAccessToken)
 
-// http://localhost:3977/api/users/me
-router.route('/users/me')
+// http://localhost:3977/api/user/me
+router.route('/user/me')
   .get(authValidator, fcGetMe)
 
-// http://localhost:3977/api/users/
-router.route('/users/')
-  .get([authValidator, schemaValidator(GetUsersSchema)], fcGetUsers)
-  .post([authValidator, uploadAvatar, schemaValidator(CreateUsersSchema)], fcCreateUser)
+// http://localhost:3977/api/user/
+router.route('/user/')
+  .get([authValidator, schemaValidator(GetUserSchema)], fcGetUsers)
+  .post([authValidator, uploadSingleAvatar, schemaValidator(CreateUserSchema)], fcCreateUser)
 
-// http://localhost:3977/api/users/:id
-router.route('/users/:id')
-  .patch([authValidator, uploadAvatar, schemaValidator(UpdateUsersSchema)], fcUpdateUser)
-  .delete([authValidator, schemaValidator(DeleteUsersSchema)], fcDeleteUser)
+// http://localhost:3977/api/user/:id
+router.route('/user/:id')
+  .patch([authValidator, uploadSingleAvatar, schemaValidator(UpdateUserSchema)], fcUpdateUser)
+  .delete([authValidator, schemaValidator(DeleteUserSchema)], fcDeleteUser)
 
 // http://localhost:3977/api/menu
 router.route('/menu')
-  .get(schemaValidator(GetMenuSchema), fcGetMenu)
+  .get(schemaValidator(GetMenuSchema), fcGetMenus)
   .post([authValidator, schemaValidator(CreateMenuSchema)], fcCreateMenu)
 
 // http://localhost:3977/api/menu/:id
 router.route('/menu/:id')
   .patch([authValidator, schemaValidator(UpdateMenuSchema)], fcUpdateMenu)
   .delete([authValidator, schemaValidator(DeleteMenuSchema)], fcDeleteMenu)
+
+// http://localhost:3977/api/course
+router.route('/course')
+  .get(schemaValidator(GetCourseSchema), fcGetCourses)
+  .post([authValidator, uploadSingleMiniature, schemaValidator(CreateCourseSchema)], fcCreateCourse)
+
+// http://localhost:3977/api/course/:id
+router.route('/course/:id')
+  .patch([authValidator, uploadSingleMiniature, schemaValidator(UpdateCourseSchema)], fcUpdateCourse)
+  .delete([authValidator, schemaValidator(DeleteCourseSchema)], fcDeleteCourse)
 
 export default router
